--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -9,7 +9,7 @@
   <div class="card-header">
     <i class="fa fa-cube"></i> <%= t(:listing_products) %>
     <div class="pull-right">
-      <%= link_to t(:new_product), new_product_path, class: "btn btn-sm btn-primary" %>
+      <%= link_to_new new_product_path %>
     </div>
   </div>
   <div class="card-body">
@@ -23,6 +23,7 @@
             <th><%= t(:year) %></th>
             <th><%= t(:warranty) %> (<%= t(:month) %>)</th>
             <th><%= t(:warranty_end) %></th>
+            <th><%= t(:end_of_lifetime) %></th>
             <th><%= t(:status) %></th>
             <th><%= t(:confirmation) %></th>
             <th colspan="2"></th>
@@ -37,10 +38,11 @@
               <td><%= product.year %></td>
               <td><%= product.warranty %></td>
               <td><%= product.warranty_end %></td>
+              <td><%= product.end_of_lifetime %></td>
               <td><%= t(product.status) %></td>
               <td><%= t('confirmation_' + product.confirmation.to_s) %></td>
-              <td><%= link_to t(:edit), edit_product_path(product) %></td>
-              <td><%= link_to t(:delete), product, method: :delete, data: { confirm: t(:are_you_sure) } %></td>
+              <td><%= link_to_edit %></td>
+              <td><%= link_to_destroy product %></td>
             </tr>
           <% end %>
         </tbody>
