--- a/app/views/templates/edit.html.erb
+++ b/app/views/templates/edit.html.erb
@@ -10,4 +10,6 @@
 
 <%= render 'form', template: @template %>
 
-<%= link_to t(:show), @template %>
+<center>
+  <%= link_to_show @template %>
+</center>
