--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div class="actions">
-      <%= form.submit nil, class:"btn btn-primary" %>
+      <%= form.submit nil, class:"btn btn-outline-primary btn-sm" %>
     </div>
     <% end %>
   </div>
