--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,3 @@
-<!-- Breadcrumbs-->
 <ol class="breadcrumb">
   <li class="breadcrumb-item">
     <a href="/"><%= t(:dashboard) %></a>
@@ -8,6 +7,26 @@
   </li>
   <li class="breadcrumb-item active"><%= @group.name %></li>
 </ol>
+
+<div class="card mb-3">
+  <div class="card-header" style="text-align:center;">
+    <i class="fa fa-info-circle"></i><b> <%= @group.name %>&nbsp;&nbsp;<%= t(:group_info) %></b>
+  </div>
+  <div class="card-body">
+    <p>
+      <strong><%= t(:coordinator) %>:</strong>
+      <%= @group.coordinator.full_name %>
+    </p>
+    <p>
+      <strong><%= t(:users) %>:</strong>
+      <%= @group.users.size %>
+    </p>
+    <p>
+      <strong><%= t(:debits) %>:</strong>
+      <%= @group.debits.size %>
+    </p>
+  </div>
+</div>
 
 <div class="card mb-3">
   <div class="card-header">
@@ -78,4 +97,6 @@
     </div>
   </div>
 
-  <%= link_to t(:edit), edit_group_path(@group) %>
+<center>
+    <%= link_to_edit edit_group_path(@group) %>
+</center>
