--- a/app/views/templates/_form.html.erb
+++ b/app/views/templates/_form.html.erb
@@ -24,7 +24,7 @@
     </div>
 
     <div class="form-group">
-      <%= form.submit nil, class: "btn btn-primary" %>
+      <%= form.submit nil, class:"btn btn-outline-primary btn-sm" %>
     </div>
     <% end %>
   </div>
