--- a/app/views/templates/show.html.erb
+++ b/app/views/templates/show.html.erb
@@ -1,4 +1,3 @@
-<!-- Breadcrumbs-->
 <ol class="breadcrumb">
   <li class="breadcrumb-item">
     <a href="/"><%= t(:dashboard) %></a>
@@ -14,4 +13,6 @@
   <%= @template.properties %>
 </p>
 
-<%= link_to t(:edit), edit_template_path(@template) %>
+<center>
+  <%= link_to_edit edit_template_path(@template) %>
+</center>
