--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="My Debits">
-          <a class="nav-link" href="/panel/my_debits">
+          <a class="nav-link" href="/debits/my_debits">
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text"><%= t(:my_debits) %></span>
           </a>
@@ -93,7 +93,7 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Debits">
-          <a class="nav-link" href="/panel/debits">
+          <a class="nav-link" href="/debits">
             <i class="fa fa-fw fa-database"></i>
             <span class="nav-link-text"><%= t(:debits) %></span>
           </a>
