--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -76,26 +76,30 @@
   <div class="card-header">
     <i class="fa fa-cube"></i> <%= t(:listing_debits) %>
     <div class="pull-right">
-      <% if @current_debit %>
-        <% if @current_debit.active? %>
-          <%= link_to t(:remove_debit), remove_debit_product_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
-        <% elsif @current_debit.pending? %>
-          <%= link_to t(:cancel_debit_request), cancel_debit_request_product_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
-        <% else %>
+      <% if current_user.responsible? || current_user.admin? %>
+        <% if @current_debit.nil? %>
           <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
             <%= t(:debit_to_user) %>
           </a>
           <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
             <%= t(:debit_to_group) %>
           </a>
+        <% else %>
+          <% if @current_debit.pending? %>
+            <% if @current_debit.start.nil? %>
+              <%= link_to t(:cancel_debit_request), debits_cancel_debit_request_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
+            <% else %>
+              <%= link_to t(:confirm_to_remove), debits_confirm_to_remove_debit_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
+            <% end %>
+          <% elsif @current_debit.inactive? %>
+            <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
+              <%= t(:debit_to_user) %>
+            </a>
+            <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
+              <%= t(:debit_to_group) %>
+            </a>
+          <% end %>
         <% end %>
-      <% else %>
-        <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
-          <%= t(:debit_to_user) %>
-        </a>
-        <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
-          <%= t(:debit_to_group) %>
-        </a>
       <% end %>
     </div>
   </div>
@@ -148,26 +152,27 @@
 
 <div class="modal fade" id="debitToGroupModal" tabindex="-1" role="dialog" aria-labelledby="debitToGroupModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <%= form_tag(debit_to_group_product_path, method: "post") do |form| %>
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="debitToGroupModalLabel"><%= t(:create_debit_request) %></h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">X</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <center>
-          <%= t(:choose_group_to_debit) %>
-          <div class="form-group">
-            <%= select_tag :group_id, options_from_collection_for_select(@groups, :id, :name), class: "form-control" %>
-          </div>
-        </center>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal"><%= t(:cancel) %></button>
-        <%= submit_tag t(:save), class: "btn btn-primary" %>
-      </div>
+    <%= form_tag(debits_request_debit_path, method: "post") do |form| %>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="debitToGroupModalLabel"><%= t(:create_debit_request) %></h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">X</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <center>
+            <%= t(:choose_group_to_debit) %>
+            <div class="form-group">
+              <%= select_tag :group_id, options_from_collection_for_select(@groups, :id, :name), class: "form-control" %>
+              <input type="hidden" name="product_id" value="<%= @product.id %>"/>
+            </div>
+          </center>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal"><%= t(:cancel) %></button>
+          <%= submit_tag t(:save), class: "btn btn-primary" %>
+        </div>
       <% end %>
     </div>
   </div>
@@ -175,26 +180,27 @@
 
 <div class="modal fade" id="debitToUserModal" tabindex="-1" role="dialog" aria-labelledby="debitToUserModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
-    <%= form_tag(debit_to_user_product_path, method: "post") do |form| %>
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="debitToUserModalLabel"><%= t(:create_debit_request) %></h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">X</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <center>
-          <%= t(:choose_user_to_debit) %>
-          <div class="form-group">
-            <%= select_tag :user_id, options_from_collection_for_select(@users, :id, :full_name), class: "form-control" %>
-          </div>
-        </center>
-      </div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal"><%= t(:cancel) %></button>
-        <%= submit_tag t(:save), class: "btn btn-primary" %>
-      </div>
+    <%= form_tag(debits_request_debit_path, method: "post") do |form| %>
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="debitToUserModalLabel"><%= t(:create_debit_request) %></h5>
+          <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">X</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <center>
+            <%= t(:choose_user_to_debit) %>
+            <div class="form-group">
+              <%= select_tag :user_id, options_from_collection_for_select(@users, :id, :full_name), class: "form-control" %>
+              <input type="hidden" name="product_id" value="<%= @product.id %>">
+            </div>
+          </center>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-secondary" type="button" data-dismiss="modal"><%= t(:cancel) %></button>
+          <%= submit_tag t(:save), class: "btn btn-primary" %>
+        </div>
       <% end  %>
     </div>
   </div>
