--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -31,7 +31,7 @@
         </div>
         <div class="mr-5"><%= Debit.all.size.to_s + " " + t(:debits) %></div>
       </div>
-      <a class="card-footer text-white clearfix small z-1" href="/panel/debits">
+      <a class="card-footer text-white clearfix small z-1" href="/debits">
         <span class="float-left"><%= t(:view_details) %></span>
         <span class="float-right">
           <i class="fa fa-angle-right"></i>
