--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -19,6 +19,11 @@
     </div>
 
     <div class="form-group">
+      <%= form.label :description %>
+      <%= form.text_field :description, id: :product_description, class: "form-control" %>
+    </div>
+
+    <div class="form-group">
       <%= form.label :template_id %>
       <%= form.collection_select :template_id, @templates, :id, :name, {}, id: "template", class: "form-control" %>
     </div>
