Front-End improvements.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
             <i class="fa fa-fw fa-cube"></i>
             <span class="nav-link-text"><%= t(:products) %></span>
           </a>
-          <ul class="sidenav-second-level" id="collapseMulti">
+          <ul class="sidenav-second-level collapse" id="collapseMulti">
             <li>
               <a href="/products"><%= t(:all_products) %></a>
             </li>
@@ -265,7 +265,7 @@
     <script src="/sb-admin/js/sb-admin.min.js"></script>
     <!-- Custom scripts for this page-->
     <script src="/sb-admin/js/sb-admin-datatables.min.js"></script>
-    <script src="/sb-admin/js/sb-admin-charts.min.js"></script>
+    <script src="/sb-admin/js/sb-admin-charts.js"></script>
     <script type="text/javascript">
       toastr.options.closeButton = true;
       _notice = $( ".notice" ).text();
