--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -20,12 +20,9 @@
             <th><%= t(:product_name) %></th>
             <th><%= t(:template) %></th>
             <th><%= t(:company) %></th>
-            <th><%= t(:year) %></th>
-            <th><%= t(:warranty) %> (<%= t(:month) %>)</th>
+            <th><%= t(:purchase_year) %></th>
             <th><%= t(:warranty_end) %></th>
-            <th><%= t(:end_of_lifetime) %></th>
             <th><%= t(:status) %></th>
-            <th><%= t(:confirmation) %></th>
             <th colspan="2"></th>
           </tr>
         </thead>
@@ -36,11 +33,8 @@
               <td><%= product.template.name %></td>
               <td><%= product.company %></td>
               <td><%= product.year %></td>
-              <td><%= product.warranty %></td>
               <td><%= product.warranty_end %></td>
-              <td><%= product.end_of_lifetime %></td>
-              <td><%= t(product.status) %></td>
-              <td><%= t('confirmation_' + product.confirmation.to_s) %></td>
+              <td><%= t(product.status) %> (<%= t("confirmation_" + product.confirmation.to_s) %>)</td>
               <td><%= link_to_edit %></td>
               <td><%= link_to_destroy product %></td>
             </tr>
