--- a/app/views/panel/index.html.erb
+++ b/app/views/panel/index.html.erb
@@ -75,44 +75,47 @@
 <!-- Area Chart Example-->
 <div class="card mb-3">
   <div class="card-header">
-    <i class="fa fa-area-chart"></i> <%= t(:logs_reports) %> (Düzenlenecek)</div>
+    <i class="fa fa-area-chart"></i> <%= t(:logs_graph) %></div>
   <div class="card-body">
     <canvas id="myAreaChart" width="100%" height="30"></canvas>
+    <div id="logsCount" style="display:none;">
+      <%= @logs_count %>
+    </div>
+    <div id="maxValue" style="display:none;">
+      <%= @logs_count.max %>
+    </div>
+    <div id="logsLabel" style="display:none;">
+      <%= t(:logs) %>
+    </div>
   </div>
 </div>
-<div class="row">
-  <div class="col-lg-8">
-    <!-- Example Bar Chart Card-->
-    <div class="card mb-3">
-      <div class="card-header">
-        <i class="fa fa-bar-chart"></i> Bar Chart Example (Düzenlenecek)</div>
-      <div class="card-body">
-        <div class="row">
-          <div class="col-sm-8 my-auto">
-            <canvas id="myBarChart" width="100" height="50"></canvas>
-          </div>
-          <div class="col-sm-4 text-center my-auto">
-            <div class="h4 mb-0 text-primary">$34,693</div>
-            <div class="small text-muted">YTD Revenue</div>
-            <hr>
-            <div class="h4 mb-0 text-warning">$18,474</div>
-            <div class="small text-muted">YTD Expenses</div>
-            <hr>
-            <div class="h4 mb-0 text-success">$16,219</div>
-            <div class="small text-muted">YTD Margin</div>
-          </div>
-        </div>
-      </div>
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fa fa-pie-chart"></i> <%= t(:group_debits) %></div>
+  <div class="card-body">
+    <canvas id="myPieChart" width="4" height="1"></canvas>
+    <div id="groups" style="display:none;">
+      <%= @groups %>
     </div>
-    <!-- /Card Columns-->
   </div>
-  <div class="col-lg-4">
-    <!-- Example Pie Chart Card-->
-    <div class="card mb-3">
-      <div class="card-header">
-        <i class="fa fa-pie-chart"></i> Pie Chart Example (Düzenlenecek)</div>
-      <div class="card-body">
-        <canvas id="myPieChart" width="100%" height="100"></canvas>
+</div>
+<div class="card mb-3">
+  <div class="card-header">
+    <i class="fa fa-bar-chart"></i> <%= t(:debits_of_groups) %></div>
+  <div class="card-body">
+    <div class="row">
+      <div class="col-sm-8 my-auto">
+        <canvas id="myBarChart" width="100" height="50"></canvas>
+      </div>
+      <div class="col-sm-4 text-center my-auto">
+        <div class="h4 mb-0 text-primary">$34,693</div>
+        <div class="small text-muted">YTD Revenue</div>
+        <hr>
+        <div class="h4 mb-0 text-warning">$18,474</div>
+        <div class="small text-muted">YTD Expenses</div>
+        <hr>
+        <div class="h4 mb-0 text-success">$16,219</div>
+        <div class="small text-muted">YTD Margin</div>
       </div>
     </div>
   </div>
