--- a/app/views/products/filtered.html.erb
+++ b/app/views/products/filtered.html.erb
@@ -2,7 +2,9 @@
   <li class="breadcrumb-item">
     <a href="/"><%= t(:dashboard) %></a>
   </li>
-  <li class="breadcrumb-item active"><%= t(@status) + ' ' + t(:products) %></li>
+  <li class="breadcrumb-item active"><%= t(:products) %></li>
+  <li class="breadcrumb-item active"><%= t(:filtered) %></li>
+  <li class="breadcrumb-item active"><%= t(@status) %></li>
 </ol>
 
 <div class="card mb-3">
@@ -17,11 +19,9 @@
             <th><%= t(:product_name) %></th>
             <th><%= t(:template) %></th>
             <th><%= t(:company) %></th>
-            <th><%= t(:year) %></th>
-            <th><%= t(:warranty) %> (<%= t(:month) %>)</th>
+            <th><%= t(:purchase_year) %></th>
             <th><%= t(:warranty_end) %></th>
-            <th><%= t(:end_of_lifetime) %></th>
-            <th><%= t(:confirmation) %></th>
+            <th><%= t(:status_confirmation) %></th>
             <th colspan="2"></th>
           </tr>
         </thead>
@@ -32,10 +32,8 @@
               <td><%= product.template.name %></td>
               <td><%= product.company %></td>
               <td><%= product.year %></td>
-              <td><%= product.warranty %></td>
               <td><%= product.warranty_end %></td>
-              <td><%= product.end_of_lifetime %></td>
-              <td><%= t('confirmation_' + product.confirmation.to_s) %></td>
+              <td><%= t("confirmation_" + product.confirmation.to_s) %></td>
               <td><%= link_to_edit edit_product_path(product) %></td>
               <td><%= link_to_destroy product %></td>
             </tr>
