--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -25,7 +25,7 @@
 
     <div class="form-group">
       <%= form.label :template_id %>
-      <%= form.collection_select :template_id, @templates, :id, :name, {}, id: "template", class: "form-control" %>
+      <%= form.collection_select :template_id, @templates, :id, :name, {}, id: :product_template, class: "form-control" %>
     </div>
 
     <div class="form-group">
@@ -35,7 +35,7 @@
 
     <div class="form-group">
       <%= form.label :properties %>
-      <%= form.text_area :properties, id: :product_properties, id: "properties", class: "form-control" %>
+      <%= form.text_area :properties, id: :product_properties, class: "form-control" %>
     </div>
 
     <div class="form-group">
