--- a/app/views/panel/user.html.erb
+++ b/app/views/panel/user.html.erb
@@ -17,6 +17,10 @@
       <strong><%= t(:full_name) %>:</strong>
       <%= @user.full_name %>
     </p>
+    <p>
+      <strong><%= t(:role) %>:</strong>
+      <%= t(@user.role) %>
+    </p>
   </div>
 </div>
 
@@ -53,3 +57,24 @@
     <% end %>
   </div>
 </div>
+<% if current_user.admin? %>
+<div class="card mb-3">
+  <div class="card-header" style="text-align:center;">
+    <i class="fa fa-user"></i> <%= t(:change_role) %></b>
+  </div>
+  <div class="card-body">
+    <center>
+      <p>
+        <%= form_tag("/panel/users/#{@user.id}/change_user_role", method: "post") do %>
+        <%= label_tag(t(:admin)) %>&nbsp;<%= radio_button(nil, :role, :admin) %>&nbsp;&nbsp;
+        <%= label_tag(t(:manager)) %>&nbsp;<%= radio_button(nil, :role, :manager) %>&nbsp;&nbsp;
+        <%= label_tag(t(:responsible)) %>&nbsp;<%= radio_button(nil, :role, :responsible) %>&nbsp;&nbsp;
+        <%= label_tag(t(:staff)) %>&nbsp;<%= radio_button(nil, :role, :staff) %>&nbsp;&nbsp;
+        <br/>
+        <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm" %>
+        <% end %>
+      </p>
+  </center>
+  </div>
+</div>
+<% end %>
