--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -153,6 +153,28 @@
     <% end %>
   </div>
 </div>
+<% if current_user.admin? || current_user.manager?%>
+  <% if @product.free? && !@product.any_pending_debit? %>
+    <div class="card mb-3">
+      <div class="card-header" style="text-align:center;">
+        <i class="fa fa-user"></i> <%= t(:change_status) %></b>
+      </div>
+      <div class="card-body">
+        <center>
+          <p>
+            <%= form_tag("/products/#{@product.id}/change_status", method: "post") do %>
+            <%= label_tag(t(:out_of_use)) %>&nbsp;<%= radio_button(nil, :status, :out_of_use) %>&nbsp;&nbsp;
+            <%= label_tag(t(:ejected)) %>&nbsp;<%= radio_button(nil, :status, :ejected) %>&nbsp;&nbsp;
+            <%= label_tag(t(:effaced)) %>&nbsp;<%= radio_button(nil, :status, :effaced) %>&nbsp;&nbsp;
+            <br/>
+            <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm" %>
+            <% end %>
+          </p>
+      </center>
+      </div>
+    </div>
+  <% end %>
+<% end %>
 
 <center>
   <%= link_to_edit edit_product_path(@product) %>
