--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -58,6 +58,7 @@
     <p>
       <strong><%= t(:status) %>:</strong>
       <%= t(@product.status) %>
+      <%= "(" + t("confirmation_" + @product.confirmation.to_s) + ")" unless @product.free? || @product.busy? %>
     </p>
 
     <% if @product.bill.url %>
@@ -86,27 +87,29 @@
     <i class="fa fa-cube"></i> <%= t(:listing_debits) %>
     <div class="pull-right">
       <% if current_user.responsible? || current_user.admin? %>
-        <% if @current_debit.nil? %>
-          <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
-            <%= t(:debit_to_user) %>
-          </a>
-          <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
-            <%= t(:debit_to_group) %>
-          </a>
-        <% else %>
-          <% if @current_debit.pending? %>
-            <% if @current_debit.start.nil? %>
-              <%= link_to t(:cancel_debit_request), debits_cancel_debit_request_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
-            <% else %>
-              <%= link_to t(:confirm_to_remove), debits_confirm_to_remove_debit_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
-            <% end %>
-          <% elsif @current_debit.inactive? %>
+        <% if @product.free? || @product.busy? %>
+          <% if @current_debit.nil? %>
             <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
               <%= t(:debit_to_user) %>
             </a>
             <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
               <%= t(:debit_to_group) %>
             </a>
+          <% else %>
+            <% if @current_debit.pending? %>
+              <% if @current_debit.start.nil? %>
+                <%= link_to t(:cancel_debit_request), debits_cancel_debit_request_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
+              <% else %>
+                <%= link_to t(:confirm_to_remove), debits_confirm_to_remove_debit_path(debit_id: @current_debit.id), class: "btn btn-sm btn-primary" %>
+              <% end %>
+            <% elsif @current_debit.inactive? %>
+              <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToUserModal" style="color: #FFF;">
+                <%= t(:debit_to_user) %>
+              </a>
+              <a class="btn btn-sm btn-primary" data-toggle="modal" data-target="#debitToGroupModal" style="color: #FFF;">
+                <%= t(:debit_to_group) %>
+              </a>
+            <% end %>
           <% end %>
         <% end %>
       <% end %>
@@ -154,7 +157,7 @@
   </div>
 </div>
 <% if current_user.admin? || current_user.manager?%>
-  <% if @product.free? && !@product.any_pending_debit? %>
+  <% unless @product.busy? || @product.any_pending_debit? %>
     <div class="card mb-3">
       <div class="card-header" style="text-align:center;">
         <i class="fa fa-user"></i> <%= t(:change_status) %></b>
@@ -167,7 +170,7 @@
             <%= label_tag(t(:ejected)) %>&nbsp;<%= radio_button(nil, :status, :ejected) %>&nbsp;&nbsp;
             <%= label_tag(t(:effaced)) %>&nbsp;<%= radio_button(nil, :status, :effaced) %>&nbsp;&nbsp;
             <br/>
-            <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm" %>
+            <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm", data: { confirm: t(:are_you_sure) } %>
             <% end %>
           </p>
       </center>
