--- a/app/views/panel/user.html.erb
+++ b/app/views/panel/user.html.erb
@@ -58,23 +58,72 @@
   </div>
 </div>
 <% if current_user.admin? %>
-<div class="card mb-3">
-  <div class="card-header" style="text-align:center;">
-    <i class="fa fa-user"></i> <%= t(:change_role) %></b>
+  <div class="card mb-3">
+    <div class="card-header" style="text-align:center;">
+      <i class="fa fa-user"></i> <%= t(:change_role) %></b>
+    </div>
+    <div class="card-body">
+      <center>
+        <p>
+          <%= form_tag("/panel/users/#{@user.id}/change_user_role", method: "post") do %>
+          <%= label_tag(t(:admin)) %>&nbsp;<%= radio_button(nil, :role, :admin) %>&nbsp;&nbsp;
+          <%= label_tag(t(:manager)) %>&nbsp;<%= radio_button(nil, :role, :manager) %>&nbsp;&nbsp;
+          <%= label_tag(t(:responsible)) %>&nbsp;<%= radio_button(nil, :role, :responsible) %>&nbsp;&nbsp;
+          <%= label_tag(t(:staff)) %>&nbsp;<%= radio_button(nil, :role, :staff) %>&nbsp;&nbsp;
+          <br/>
+          <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm" %>
+          <% end %>
+        </p>
+    </center>
+    </div>
   </div>
-  <div class="card-body">
-    <center>
-      <p>
-        <%= form_tag("/panel/users/#{@user.id}/change_user_role", method: "post") do %>
-        <%= label_tag(t(:admin)) %>&nbsp;<%= radio_button(nil, :role, :admin) %>&nbsp;&nbsp;
-        <%= label_tag(t(:manager)) %>&nbsp;<%= radio_button(nil, :role, :manager) %>&nbsp;&nbsp;
-        <%= label_tag(t(:responsible)) %>&nbsp;<%= radio_button(nil, :role, :responsible) %>&nbsp;&nbsp;
-        <%= label_tag(t(:staff)) %>&nbsp;<%= radio_button(nil, :role, :staff) %>&nbsp;&nbsp;
+<% end %>
+
+<% if current_user.admin? || current_user.responsible? %>
+  <div class="card mb-3">
+    <div class="card-header" style="text-align:center;">
+      <i class="fa fa-user"></i> <%= t(:edit_user_groups) %></b>
+    </div>
+    <div class="card-body">
+      <% unless @user_groups.empty? %>
+        <table class="table table-bordered" width="100%" cellspacing="0">
+          <thead>
+            <tr>
+              <th><%= t(:group_name) %></th>
+              <th colspan="1"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @user_groups.each do |group| %>
+            <tr>
+              <td><%= group.name %></td>
+              <td>
+                <%= link_to(
+                  icon('trash', t(:destroy)),
+                  "/panel/users/#{@user.id}/edit_user_groups?group_id=#{group.id}",
+                  method: :post,
+                  data: { confirm: t(:are_you_sure) },
+                  class: 'btn btn-outline-danger btn-sm'
+                ) %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
         <br/>
-        <%= submit_tag t(:save), class:"btn btn-outline-primary btn-sm" %>
-        <% end %>
-      </p>
-  </center>
+      <% end %>
+      <% unless @joinable_groups.empty? %>
+      </br/>
+        <center>
+            <p>
+              <%= form_tag("/panel/users/#{@user.id}/edit_user_groups", method: "post") do %>
+                <%= collection_select nil, :group_id, @joinable_groups, :id, :name, {}, class: "form-control" %>
+                <br/>
+                <%= submit_tag t(:add), class:"btn btn-outline-primary btn-sm" %>
+              <% end %>
+            </p>
+        </center>
+      <% end %>
+    </div>
   </div>
-</div>
 <% end %>
